fix deletion, fix reset
